# openposter

./: .env  .env.example  .gitignore  CLAUDE.md  DIAGNOSTICS_PLAN.md  README.md  THOUGHTS.md  docker-compose.e2e.yml  docker-compose.yml  openposter-spec-v1.md  package-lock.json  package.json  playwright.config.ts
diagnostics-app/: Dockerfile  package-lock.json  package.json
e2e/: README.md  global-setup.ts  global-teardown.ts  test-state.ts
indexer/: Dockerfile  README.md  pyproject.toml
indexer/data/: indexer.sqlite
indexer/openposter_indexer/: __init__.py  app.py  config.py  db.py  errors.py  lifecycle.py  main.py  pagination.py  verify.py
indexer/openposter_indexer/routes/: admin.py  blob_sources.py  creators.py  facets.py  nodes.py  posters.py  recent.py  search.py  stats.py  tv_boxset.py
issuer/: Dockerfile  pyproject.toml
issuer/data/: issuer.sqlite
issuer/openposter_issuer/: app.py  auth.py  config.py  db.py  lifecycle.py  util.py
issuer/openposter_issuer/routes/: auth_routes.py  creator_routes.py  nodes_routes.py  subscription_routes.py  ui_routes.py  url_claim_routes.py
plex-mock/: app.py  (+1 more)
reference-node/: Dockerfile  README.md  compose.multi.yml  docker-compose.yml  pyproject.toml
reference-node/openposter_node/: __init__.py  announce.py  app.py  app_init.py  assets.py  config.py  cors.py  db.py  errors.py  gossip.py  lifecycle.py  main.py  mirror_sync.py  plex_sync.py  plex_ws.py
reference-node/openposter_node/crypto/: __init__.py  signing.py
reference-node/openposter_node/routes/: admin.py  applied_artwork.py  auth.py  blobs.py  changes.py  feed.py  media_server.py  node_descriptor.py  node_info.py  nodes.py  pair_ui.py  plex.py  posters.py  posters_list.py  search.py  themes.py  webhooks.py
reference-node/openposter_node/storage/: blobs.py
reference-node/tests/: conftest.py  test_admin_posters.py
reference-node/tools/: README.md  make_seed.py  upload_poster.py
(+159 files in other folders)
